Update project description and add package-lock.json. Enhanced the UTA Design System tagline for clarity and consistency. Added a development script for Tailwind CSS in package.json and updated yarn.lock with npm registry links.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "scripts": {
+    "tailwind:dev": "tailwindcss -i ./vitepress/src/style.css -o ./vitepress/theme/style.css --watch",
     "dev": "vitepress dev",
     "build": "vitepress build",
     "preview": "vitepress preview"
